force-app/main/default/objects/Review_Process__c/Review_Process__c.object-meta.xml
<CustomObject>
    <label>Review Process</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Review Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Review Processes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>