force-app/main/default/objects/Review_Process__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>