force-app/main/default/objects/Review_Process__c/fields/Sales_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>