force-app/main/default/objects/Review_Process__c/fields/SalesTeamId__c.field-meta.xml
<CustomField>
    <fullName>SalesTeamId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SalesTeamId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>