force-app/main/default/objects/Review_Process__c/fields/TerritoryName__c.field-meta.xml
<CustomField>
    <fullName>TerritoryName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>