force-app/main/default/objects/Review_Process__c/recordTypes/Sales_Manager_With_Team.recordType-meta.xml
<RecordType>
    <fullName>Sales_Manager_With_Team</fullName>
    <active>true</active>
    <description>This is for when a Sales Manager is reviewing w/ a Team Lead(s)</description>
    <label>Sales Manager With Team</label>
</RecordType>