force-app/main/default/objects/Review_Process__c/recordTypes/Territory_Leader_With_Sales_Manager.recordType-meta.xml
<RecordType>
    <fullName>Territory_Leader_With_Sales_Manager</fullName>
    <active>true</active>
    <description>This is for when a Territory Leader is reviewing with a sales manager</description>
    <label>Territory Leader With Sales Manager</label>
</RecordType>