force-app/main/default/objects/Review_Process__c/listViews/Created_All_Time.listView-meta.xml
<ListView>
    <fullName>Created_All_Time</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Sales_Manager__c</columns>
    <columns>Sales_Team_Name__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>Created All Time</label>
</ListView>