force-app/main/default/objects/Review_Process__c/listViews/Created_Last_30_Days.listView-meta.xml
<ListView>
    <fullName>Created_Last_30_Days</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Sales_Manager__c</columns>
    <columns>Sales_Team_Name__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Created Last 30 Days</label>
</ListView>