force-app/main/default/objects/Review_Process__c/listViews/Created_This_Month.listView-meta.xml
<ListView>
    <fullName>Created_This_Month</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Sales_Manager__c</columns>
    <columns>Sales_Team_Name__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Created This Month</label>
</ListView>